--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
     <string name="app_name">Tako</string>
     <string name="title_activity_maps">Map</string>
-    <string name="Logo">Selamat Datang di TAKO\n Peta dan Pengaduan Sekitar RPTRA</string>
+    <string name="Logo">Selamat Datang di TAKO\nPeta dan Pengaduan Sekitar RPTRA</string>
     <string name="approve">Approve</string>
+    <string name="sukses">Pelaporan Sukses\nTerima Kasih</string>
 
     <string-array name="Event">
         <item>Pilih Tema Pelaporan</item>
